# chatbone

./: .env  .env.chatbone  .gitignore  alembic.ini  chat_db.json  fatest.py  pyproject.toml  readme.md  reload_db.sh  setup.sh  te.py
configs/: auth.toml  configs.toml  executor.toml  logger.toml
deployments/auth/: serve.yaml
deployments/compose/: docker-compose.yaml  serve.yaml
deployments/datastore/: serve.yaml
docker/: Dockerfile
docs/: .$chatbone.drawio.bkp  .$chatbone.drawio.dtmp  chatbone.drawio
docs/diagrams/: chatbone.vpp  chatbone.vpp.bak  chatbone.vpp.bak2  chatbone.vpp.bak_000f  chatbone.vpp.bak_001d  chatbone.vpp.bak_002d  chatbone.vpp.bak_003d  chatbone.vpp.bak_004d  chatbone.vpp.bak_005d  chatbone.vpp.bak_006d  chatbone.vpp.bak_007d  chatbone.vpp.bak_008d  chatbone.vpp.bak_009d  chatbone.vpp.bak_010d  chatbone.vpp.bak_011d  chatbone.vpp.bak_012d
docs/docx/: .~lock.chatbone.docx#  chatbone.docx
drafts/: a.py  a.txt  actor.py  alembic_test.py  async_highload.py  fa-ray.py  graph.ipynb  graph.mermaid  graph_stream.py  lgp-mem.ipynb  repo_test.py  test_db.ipynb  testdb.py  viztracer.py
drafts/notebooks/: aio_chat.py  chat_model.ipynb  chatbot.ipynb  cognitive-architecture.ipynb  embed-and-retrieval.ipynb  hf-pipeline-chatmodel.ipynb  memory.ipynb  rag.ipynb  storage_manager.ipynb  test.ipynb  test_pytorch.ipynb  test_pytorch.py  tool.ipynb
drafts/tools/: search.ipynb  trace.py
drafts/vllm/: openai-vllm-test.py  vllm-stream.ipynb
logs/: logs.2025-03-03_11-20-52_238610.txt  logs.txt
migrations/: alembic.ini  env.py
migrations/chat_db/: 85793cd706d3_first_migration.py
migrations/datastore_db_versions/: 5683eac29eb8_upgrade_at_2025_04_10_14_31_29_768347.py  8100e3b39999_upgrade_at_2025_05_03_06_44_51_326937_.py
scripts/: load_chat.py  migrations.py
src/ai_models/: embedding.py  proxy.py
src/assistants/: assistant.py
src/auth/: .env.auth  app.py  auth_svc.py  config.toml  redis_config.toml  settings.py
src/chat/: .env.chat  app.py  chat_assistants_svc.py  config.toml  settings.py
tests/: conftest.py
(+164 files in other folders)
